--- a/khoBlog/static/css/Themes/general-theme/general-theme.scss
+++ b/khoBlog/static/css/Themes/general-theme/general-theme.scss
@@ -833,3 +833,51 @@ a .iconify {
 .progress-0plus .progress-bar {
     background-color: #f50057;
 }
+
+.task-list-item {
+    list-style-type: none !important;
+}
+
+.task-list-item input[type='checkbox'] {
+    margin: 0 4px 0.25em -20px;
+    vertical-align: middle;
+}
+
+.task-list-control {
+    display: inline; /* Ensure label is inline incase theme sets it to block.*/
+}
+
+.task-list-control {
+    position: relative;
+    display: inline-block;
+    color: #555;
+    cursor: pointer;
+}
+
+.task-list-control input[type='checkbox'] {
+    position: absolute;
+    opacity: 0;
+    z-index: -1; /* Put the input behind the label so it doesn't overlay text */
+}
+
+.task-list-indicator {
+    position: absolute;
+    top: -8px;
+    left: -18px;
+    display: block;
+    width: 14px;
+    height: 14px;
+    color: #eee;
+    background-color: #eee;
+    border-radius: 0.25rem;
+}
+
+.task-list-control input[type='checkbox']:checked + .task-list-indicator::before {
+    display: block;
+    margin-top: -4px;
+    margin-left: 2px;
+    font-size: 16px;
+    line-height: 1;
+    content: '✔';
+    color: #1ebb52;
+}
