Read More and #comments

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -113,7 +113,7 @@
 
                     <hr class="hr" />
 
-                    <div class="comment">
+                    <div id="comments" class="comment">
 
                         <a class="w3-btn w3-theme-dark" href="{% url 'add_comment_to_post' slug=post.slug %}">Add comment</a>
 
