--- a/khoBlog/static/css/Themes/general-theme/general-theme.css
+++ b/khoBlog/static/css/Themes/general-theme/general-theme.css
@@ -40,6 +40,10 @@ body {
   color: #ddd;
 }
 
+.khoOrange {
+  color: orange !important;
+}
+
 /* full-sized  container that fills up the page */
 .w3-main-div {
   height: 100% !important;
