--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -3,6 +3,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.21.1/firebase-analytics.js"></script>
+
+        <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        var firebaseConfig = {
+            apiKey: "AIzaSyDo47xBD-VL4bN9JT_efi9u_lsYGys8pFQ",
+            authDomain: "django-khodok.firebaseapp.com",
+            databaseURL: "https://django-khodok.firebaseio.com",
+            projectId: "django-khodok",
+            storageBucket: "django-khodok.appspot.com",
+            messagingSenderId: "555741128855",
+            appId: "1:555741128855:web:aecc0210cffd7bc1b3a1d2",
+            measurementId: "G-9K7CK18BG6"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+        </script>
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149959147-2"></script>
         <script>
