--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -119,7 +119,7 @@
     <a class="w3-bar-item w3-button khoBold" href="/pages">Coming Soon ! (Pages)</a>
 
     {% for post in posts %}
-        {% if post.published_date and not post.private or not post.published_date and user.is_superuser or post.private and user.is_superuser %}
+        {% if post.published_date and not post.private and not post.hidden or not post.published_date and user.is_superuser or post.private and user.is_superuser %}
             <a class="w3-bar-item w3-button" href="{{ post.get_absolute_url }}">{{ post.title }}</a>
         {% endif %}
     {% endfor %}
