--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,7 +6,7 @@
     <a class="w3-bar-item w3-button khoBold" href="/pages">Coming Soon ! (Pages)</a>
 
     {% for post in posts %}
-        {% if post.published_date and not post.private or not post.published_date and user.is_superuser or post.private and user.is_superuser %}
+        {% if post.published_date and not post.private and not post.hidden or not post.published_date and user.is_superuser or post.private and user.is_superuser %}
             <a class="w3-bar-item w3-button" href="{{ post.get_absolute_url }}">{{ post.title }}</a>
         {% endif %}
     {% endfor %}
@@ -64,6 +64,10 @@
                                     {% if not post.published_date %}
                                         <a class="w3-right" href="{% url 'post_publish_private' slug=post.slug %}">
                                             <span class="iconify" data-icon="foundation:folder-lock" data-inline="false"></span>
+                                        </a>
+
+                                        <a class="w3-right" href="{% url 'post_publish_hidden' slug=post.slug %}">
+                                            <span class="iconify" data-icon="mdi:file-hidden" data-inline="false"></span>
                                         </a>
 
                                         <a class="w3-right" href="{% url 'post_publish' slug=post.slug %}">
