--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -29,14 +29,14 @@
         </script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149959147-2"></script>
+        {% comment %} <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149959147-2"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
             gtag('config', 'UA-149959147-2');
-        </script>
+        </script> {% endcomment %}
 
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
