--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -25,7 +25,7 @@
             };
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig);
-            firebase.analytics();
+            {% comment %} firebase.analytics(); {% endcomment %}
         </script>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
